src/test/ui/rfc-0107-bind-by-move-pattern-guards/feature-gate.gate_and_feature_nll.stderr
error: compilation successful
  --> $DIR/feature-gate.rs:42:1
   |
LL | / fn main() {
LL | |     foo(107)
LL | | }
   | |_^

error: aborting due to previous error

